--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.3.0-alpha.3",
-    "react-native": "^0.54.3"
+    "react-native": "^0.54.3",
+    "react-native-mask": "^0.5.0",
+    "react-native-router-flux": "^4.0.0-beta.28"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
