--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.3.0-alpha.3",
     "react-native": "^0.54.3",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-mask": "^0.5.0",
     "react-native-router-flux": "^4.0.0-beta.28"
   },
